--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.rodrigopeleias</groupId>
 	<artifactId>bookstoremanager</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>bookstoremanager</name>
+	<name>bookstoremanager1</name>
 	<description>Bookstore Manager Project</description>
 	<properties>
 		<java.version>11</java.version>
